--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,10 @@
-# AI Model API Keys (at least one required)
-ANTHROPIC_API_KEY=
-OPENAI_API_KEY=
-MISTRAL_API_KEY=
-HUGGING_FACE_API_KEY=
-GOOGLE_API_KEY=
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
 # Pinecone Configuration
-PINECONE_API_KEY=
-PINECONE_PROJECT=
+PINECONE_API_KEY=your_pinecone_api_key_here
+PINECONE_INDEX=products
 PINECONE_CALLS_INDEX=calls
-PINECONE_CALLS_NAMESPACE=default
-PINECONE_REGION=us-west-2
-PINECONE_CLOUD=aws
-
-# Embedding Configuration
-OPENAI_EMBEDDING_MODEL=text-embedding-3-large
-EMBEDDING_DIM=3072
-
+PINECONE_CALLS_NAMESPACE=
