--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,12 @@
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
-
+# OTHER PROVIDERS
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+GOOGLE_GENERATIVE_AI_API_KEY=your_google_api_key_here
+MISTRAL_API_KEY=your_mistral_api_key_here
 # Pinecone Configuration
 PINECONE_API_KEY=your_pinecone_api_key_here
 PINECONE_INDEX=products
 PINECONE_CALLS_INDEX=calls
-PINECONE_CALLS_NAMESPACE=
+PINECONE_CALLS_NAMESPACE=default
